@@ -26,6 +26,7 @@ ChangeLog
 [+] * Better support for messages on Motorola, thanks to Quintin Hill.
 [-] * Fix reading of SMS backups without text (bug #963).
 [-] * Send message even if SendingTimeOut is null (bug #977).
+[-] * Disabled automatic OBEX for Motorola phones.
     
 20090813 - 1.25.91
 
